# remedify

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO-tomorrow.md  eol_data.json  plugin.yaml  pyproject.toml  remedify-demo.cast  remedify-trivy  remedify.py  remedify_mcp.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  plugin-release.yml  scheduled.yml
demo/: README.md  after.json  before.json  demo.sh
examples/: grype-ubuntu.json  osv-scanner.json  output-ubuntu.json  output-ubuntu.md  output-ubuntu.sh  sysdig-api-v1.json  sysdig-report.csv  sysdig-scan-result.json  trivy-alpine.json  trivy-amazon2.json  trivy-centos7-eol.json  trivy-real-ubuntu1804.json  trivy-rhel.json  trivy-ubuntu-after.json  trivy-ubuntu.json  verify-after.json  verify-before.json
scripts/: update_eol.py
tests/: test_apk_version.py  test_canary.py  test_dpkg_property.py  test_eol.py  test_fuzz.py  test_mcp.py  test_plugin.py  test_remedify.py  test_security.py  test_suppression.py  test_unclassified.py  test_verify.py
