[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remedify"
version = "0.5.2"
description = "Turn vulnerability scan results into concrete, OS-specific remediation commands"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Keita Higaki" }]
requires-python = ">=3.9"
keywords = ["security", "vulnerability", "remediation", "trivy", "patching"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/higakikeita/remedify"
Issues = "https://github.com/higakikeita/remedify/issues"

[project.scripts]
remedify = "remedify:main"

[tool.setuptools]
py-modules = ["remedify"]
